# fircode

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
.github/workflows/: ruff.yml
fircode/: config.py  db_router.py  exceptions.py  main.py  models.py  session.py  shelter.conf  spa_static_files.py  startup.py  user_utils.py
frontend/: index.html
frontend/assets/: index-Cihyg4Yx.js  index-DR08TVEn.css
